# spatial-composer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  spatial_composer_gesture_plan.md
.github/workflows/: windows-build.yml
apps/gesture_tool_godot/: export_presets.cfg  project.godot
apps/gesture_tool_godot/scenes/: Main.tscn
apps/gesture_tool_godot/scripts/: DeviceMotionController.gd  GestureRecorder.gd  JsonSerializer.gd  LiveSyncClient.gd  MacroGenerator.gd  Main.gd  ProjectModel.gd  TrajectoryTrack.gd  WorldView.gd
apps/spatial_preview_cli/: CMakeLists.txt
apps/spatial_preview_cli/include/spatial_preview/: AudioAssetRegistry.hpp  Json.hpp  LiveSyncServer.hpp  MathTypes.hpp  MiniaudioIO.hpp  OfflineRenderCommand.hpp  ProjectLoader.hpp  ProjectTypes.hpp  SpatialPreviewRenderer.hpp  TrajectoryEvaluator.hpp
apps/spatial_preview_cli/src/: AudioAssetRegistry.cpp  Json.cpp  LiveSyncServer.cpp  MiniaudioIO.cpp  OfflineRenderCommand.cpp  ProjectLoader.cpp  SpatialPreviewRenderer.cpp  TrajectoryEvaluator.cpp  main.cpp
docs/: THIRD_PARTY.md
scripts/: package_windows_app.ps1
shared/examples/listener_flythrough/: project.json
shared/examples/simple_orbit/: project.json
shared/schemas/: project.schema.json
